# journal-rank-mcp

./: README.md  README.zh.md  pyproject.toml  temp_cols.txt
.opencode/skills/journal-rank/: LICENSE  SKILL.md  query_journal.py
.opencode/skills/patchright-cli/: SKILL.md
.opencode/skills/patchright-cli/references/: request-mocking.md  running-code.md  session-management.md  snapshot-refs.md  storage-state.md  tracing.md  video-recording.md
.opencode/skills/search-scispace/: SKILL.md  journals_high_lite.json
data/: CSSCI.json  build_database.py  fields.md  fields_lite.md  filter_high_rank.py  journals.csv  journals_high_rank.json  merge_all.py  merge_conflicts.md  rules.md  to_src_data.py  北大核心.json
data/ABDC/: ABDC-JQL-2025-v1-260326.xlsx  ABDC.json  ABDC_处理.py
data/CSSCI 南大核心/: CSSCI.json  CSSCI_处理.py
data/CSSCI 南大核心/CSSCI 2025-26/: 中文社会科学引文索引（CSSCI）来源期刊及扩展版目录（2025-2026）.xlsx
data/JCR/: 2025影响因子.xlsx  JCR_处理.py
data/Mega-Journal/: Mega-Journal.json  Mega-Journal_处理.py
data/中科院分区/: 2025中科院分区表.xlsx  2025中科院分区表完整版（附2023vs2025对比版）.xlsx  中科院分区表.json  中科院分区表_处理.py  中科院分区表完整版_处理.py
data/中科院分区表及JCR原始数据文件/: _check.py  merge.py  readme.md
data/北大核心/: 2023版第十版北大核心 完整榜单.xlsx  北大核心.json  北大核心_处理.py
data/期刊简称/: 2025年4月最新期刊缩写名称.txt  convert.py  期刊缩写.json
src/journal_rank_mcp/: __init__.py  __main__.py  database.py  server.py
src/publication_rank/: __init__.py  __main__.py  database.py  fetcher.py  server.py
