[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "journal-rank-mcp"
version = "0.1.0"
description = "MCP server for querying academic journal rankings (JCR quartile, CAS zone, impact factor, etc.)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.3.0",
]

[project.scripts]
journal-rank-mcp = "journal_rank_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/journal_rank_mcp"]
